--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
         <div class="card-footer fixed-bottom" style="background-color: pink" style="font-weight: bolder;">
             <b>Made with ❤ By CSSK</b>
         </div>
-    </div>
+    </div></br>
     <!-- end of the footer  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
