--- a/templates/start.html
+++ b/templates/start.html
@@ -18,7 +18,7 @@
         </div>
 
         <button type="button" onclick="load()" class="button">Play</button>
-    </center>
+    </center><br>
     <center>
             <div class="img">
         <img src="../static/photos/200w.gif" alt="" srcset="">
