--- a/templates/main.html
+++ b/templates/main.html
@@ -43,7 +43,7 @@
             };
         </script>
 
-    </center>
+    </center><br>
     <center>
         <div class="img">
             <img src="../static/photos/200w.gif" alt="" srcset="">
