--- a/templates/start.html
+++ b/templates/start.html
@@ -18,12 +18,13 @@
         </div>
 
         <button type="button" onclick="load()" class="button">Play</button>
-    </center><br><br><br>
+    </center>
     <center>
             <div class="img">
         <img src="../static/photos/200w.gif" alt="" srcset="">
     </div>
     </center>
+    <br><br><br>
 
     <div class="card text-center fixed-bottom" style="background-color: rgb(168, 164, 164);">
         <div class="card-footer fixed-bottom" style="background-color: pink" style="font-weight: bolder;">
