--- a/templates/main.html
+++ b/templates/main.html
@@ -43,12 +43,12 @@
             };
         </script>
 
-    </center><br>
+    </center>
     <center>
         <div class="img">
             <img src="../static/photos/200w.gif" alt="" srcset="">
         </div>
-    </center>
+    </center><br><br><br>
 
     <div class="card text-center fixed-bottom" style="background-color: rgb(168, 164, 164);">
         <div class="card-footer fixed-bottom" style="background-color: pink" style="font-weight: bolder;">
